[gd_scene load_steps=5 format=3 uid="uid://8ruvomdy82vb"]

[ext_resource type="Script" uid="uid://c00e47876q22v" path="res://StartScene/text_boxes.gd" id="1_8p5eo"]
[ext_resource type="FontFile" uid="uid://2b052kph5gdr" path="res://TextFonts/LowresPixel-Regular.otf" id="2_tyug4"]
[ext_resource type="Texture2D" uid="uid://cnh2qt8h4uqo0" path="res://Artwork/dialog_box.png" id="3_ue61j"]

[sub_resource type="LabelSettings" id="LabelSettings_ln1g0"]
font_size = 15

[node name="Dialouge" type="CanvasLayer"]
script = ExtResource("1_8p5eo")

[node name="SpeakerLabel" type="Label" parent="."]
z_index = 12
offset_left = 27.0
offset_top = 377.0
offset_right = 93.0
offset_bottom = 400.0
scale = Vector2(1.60273, 1.37871)
theme_override_fonts/font = ExtResource("2_tyug4")
text = "Speaker"

[node name="DialogueLabel" type="Label" parent="."]
z_index = 12
custom_minimum_size = Vector2(100, 50)
offset_left = 26.0
offset_top = 455.0
offset_right = 526.0
offset_bottom = 625.0
scale = Vector2(1.89117, 1.35284)
theme_override_fonts/font = ExtResource("2_tyug4")
theme_override_font_sizes/font_size = 24
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
label_settings = SubResource("LabelSettings_ln1g0")
autowrap_mode = 2

[node name="ColorRect" type="TextureRect" parent="."]
offset_left = -4.0
offset_top = 348.0
offset_right = 36.0
offset_bottom = 388.0
scale = Vector2(3, 3.13089)
texture = ExtResource("3_ue61j")
